@@ -1,6 +1,7 @@
 Revision history for P5built-ins
 
 {{$NEXT}}
+    - add support for print, printf, say, STDIN, STDOUT, STDERR
 
 0.0.17  2018-05-04T15:30:23+02:00
     - add support for __FILE__, __LINE__, __PACKAGE__, __SUB__
